# Smart_Construction

./: INTEGRATION_YOLO_FULL.md  README.md  detect.py  detect_visual.py  visual_interface.py  yolo_full_adapter.py
UI/: main_window.py
yolo_full/: .gitignore  1.1选题申报表-已填写.docx  1.2开题报告-已填写.docx  1.2开题报告要点-扩展版.docx  1.3任务书-已填写.docx  1.3任务书要点-扩展版.docx  CHANGELOG.md  CMakeLists.txt  Makefile  PROJECT_STATUS.md  QUICK_START.md  README.md  TROUBLESHOOTING.md  build.bat  build.py  build.sh  config.py  download_models.py  install-vscode-extensions.bat  requirements.txt  setup_env.bat  setup_env.ps1  test_detector.py  安装指南-Python3.11.md  技术方案文档.md  项目完成总结.md
yolo_full/app/: main.py
yolo_full/app/core/: detector.py
yolo_full/app/ui/: main_window.py
yolo_full/app/utils/: image_utils.py  video_utils.py
yolo_full/data/: helmet.yaml
yolo_full/docs/: VSCode快速上手.md  VSCode配置指南.md  快速开始.md  构建系统使用指南.md  项目说明.md
yolo_full/evaluate/: eval_model.py
yolo_full/models/improved/attention/: eca_module.py
yolo_full/models/improved/backbone/: mobilenetv3.py
yolo_full/train/: train_baseline.py
